# ReadVerse

./: .gitignore  app.py  create_admin.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  run_dev.py  tailwind.config.js
migrations/versions/: 135272138342_.py  32eaa391d89a_.py  5278a0f77b1d_.py
readverse/: __init__.py  dto.py  models.py  plugins.py  utils.py
readverse/css/: main.css
readverse/routes/: auth.py  index.py  profile.py  story.py
readverse/static/: style.css  utils.js
readverse/static/profile/: edit.js
readverse/static/story/: comments.js  create.js  index.js
readverse/templates/: base.html  error.html
readverse/templates/macro/: forms.html  index.html
readverse/templates/pages/: index.html  search.html
readverse/templates/pages/auth/: register.html
readverse/templates/pages/profile/: change_password.html  edit.html  index.html
readverse/templates/pages/story/: edit.html  new.html  read.html
